# STAP

./: .bashrc_ros  .gitignore  .gitmodules  .tmux.conf  CMakeLists.txt  Dockerfile.gpu  Dockerfile.ros  Dockerfile.train  Dockerfile118.gpu  Dockerfile118.ros  Dockerfile121.gpu  Pipfile  README.md  RealWorldExperiments.md  build_docker_ros.sh  build_docker_train.sh  environment.yml  ethernet_setup.txt  generate_primitive_dataset.py  package.xml  pyproject.toml  requirements.txt  run_docker_ros.sh  run_docker_train.sh  setup.py
configs/: base_config.py
models/: mv_all_eval_files.sh
prompts/: template_prompt.md  template_promt.md  total_promtp_experiments.md
scripts/data/: dataset_conversion.py  generate_all_datasets_docker.sh  generate_all_datasets_tmux.sh  generate_primitive_datasets.sh  generate_primitive_datasets_docker.sh  generate_primitive_datasets_tmux.sh  generate_static_handover_datasets_tmux.sh  helper_functions.sh
scripts/debug/: debug_pybullet.py
scripts/download/: download_checkpoints.sh  download_results.sh
scripts/eval/: eval_dynamics.py  eval_object_arrangement_ablation.sh  eval_object_arrangement_ablation_docker.sh  eval_object_arrangement_additive_baseline.sh  eval_object_arrangement_baseline.sh  eval_object_arrangement_baseline_docker.sh  eval_object_arrangement_oracle.sh  eval_planner_summary.py  eval_planners.py
scripts/prompts/: generate_prompt.py
scripts/train/: debug_commands.sh  train_dynamics.sh  train_dynamics_docker.sh  train_dynamics_docker_fast.sh  train_dynamics_docker_fast_single.sh  (+12 more)
tests/: test_custom_fns.py
(+317 files in other folders)
