<?xml version="1.0"?>
<package format="2">
  <!-- EDIT: Package name, version description -->
  <name>stap</name>
  <version>1.0.0</version>
  <description>The stap ROS package</description>

  <maintainer email="jakob.thumm@tum.de">Jakob Thumm</maintainer>
  <author email="jakob.thumm@tum.de">Jakob Thumm</author>

  <!-- EDIT: License -->
  <license>GNU General Public License Version 3</license>

  <!-- Required for all packages -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Required for all Python packages -->
  <depend>rospy</depend>

  <!-- EDIT: Add/change depend tags to specify what this package depends on. -->
  <!-- Valid keys are any Catkin packages in this workspace's src/ directory, -->
  <!-- any installed ROS package, or any ROS-recognized system dependency -->
  <!-- (see this link for the current list: https://github.com/ros/rosdistro/blob/master/rosdep/base.yaml)-->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>